LC-768 adds style and applies poll to all sidebars

--- a/source/_patterns/01-molecules/08-poll/00-poll-form.mustache
+++ b/source/_patterns/01-molecules/08-poll/00-poll-form.mustache
@@ -1,4 +1,6 @@
-<form action="/tested-poll" method="post" id="poll-view-voting" accept-charset="UTF-8"><div><div class="poll">
+<form action="/tested-poll" method="post" id="poll-view-voting" accept-charset="UTF-8"><div>
+
+<div class="poll">
   <div class="vote-form">
     <div class="choices">
             <div class="form-item form-type-radios form-item-choice">
@@ -22,7 +24,7 @@
 </div>
 </div>
     </div>
-    <input id="edit-vote" name="op" value="Vote" class="form-submit" type="submit">  </div>
+    <input id="edit-vote" name="op" value="Vote" class="form-submit btn" type="submit">  </div>
     <input name="form_build_id" value="form-Di-xtmlA_RPZRILOx4nkknyPwvNj8AF-gZH6l7A62XE" type="hidden">
 <input name="form_token" value="dCR4rdicnxQRZKetcWqXOeKjo3R_C8mmi-LJwiv7h4c" type="hidden">
 <input name="form_id" value="poll_view_voting" type="hidden">
