--- a/source/_patterns/03-templates/00-homepage.mustache
+++ b/source/_patterns/03-templates/00-homepage.mustache
@@ -35,6 +35,7 @@
 
 			<div class="l-sidebar">
 				{{> organisms-recent-tweets }}
+				{{> organisms-poll }}
 			</div><!--end .l-sidebar-->
 		</div><!--end .l-two-col-->
 	</div><!--End role=main-->
