--- a/source/_patterns/03-templates/01-blog.mustache
+++ b/source/_patterns/03-templates/01-blog.mustache
@@ -13,6 +13,7 @@
 
 			<div class="l-sidebar">
 				{{> organisms-recent-tweets }}
+				{{> organisms-poll }}
 			</div><!--end l-sidebar-->
 		</div><!--end two-col-->
 	</div><!--End role=main-->
