--- a/source/_patterns/03-templates/02-article.mustache
+++ b/source/_patterns/03-templates/02-article.mustache
@@ -19,6 +19,7 @@
 			<div class="l-sidebar">
 				{{> organisms-related-posts }}
 				{{> organisms-recent-tweets }}
+				{{> organisms-poll }}
 			</div><!--end l-sidebar-->
 		</div><!--end l-two-col-->	
 	</div><!--End role=main-->
