--- a/source/_patterns/03-templates/04-tweets.mustache
+++ b/source/_patterns/03-templates/04-tweets.mustache
@@ -13,6 +13,7 @@
 
 			<div class="l-sidebar">
 				{{> organisms-related-posts }}
+				{{> organisms-poll }}
 			</div><!--end l-sidebar-->
 		</div><!--end l-two-col-->	
 	</div><!--End role=main-->
