--- a/source/_patterns/03-templates/05-poll.mustache
+++ b/source/_patterns/03-templates/05-poll.mustache
@@ -6,11 +6,7 @@
 	<div role="main">
 		<div class="l-two-col">
 			<div class="l-main">
-				<h1>Poll</h1>
-				<h2>Poll Results</h2>
-				{{> organisms-poll-results }}
-				<h2>Poll Form</h2>
-				{{> organisms-poll-form }}
+				{{> organisms-poll }}
 			</div><!--end l-main-->
 			<div class="l-sidebar">
 				{{> organisms-related-posts }}
