LC-768 form textfield button fix

--- a/source/css/scss/base/_forms.scss
+++ b/source/css/scss/base/_forms.scss
@@ -26,6 +26,7 @@ button, input, select, textarea {
 }
 
 input, textarea {
+	width: 100%;
 	border: 1px solid $gray;
 	padding: $pad-half 0.65rem;
 }
