Created a footer slab for style guide

--- a/source/css/scss/objects/_header.scss
+++ b/source/css/scss/objects/_header.scss
@@ -45,6 +45,7 @@
 .header-wrap-background-blur{
 	max-width: 1910px;
 	width: 100%;
+	height: 105px;
 	z-index: 100;
 	margin-left: auto;
 	margin-right: auto;
