--- a/source/css/scss/objects/_sections.scss
+++ b/source/css/scss/objects/_sections.scss
@@ -6,6 +6,7 @@
 	margin-bottom: $space-half;
 }
 .slab-posts {
-    background-color: #00ff00;
-    margin: 30px;
+    background-color: $lightgreen;
+    padding: 30px;
+    margin: 0px;
 }
