LC-833 changes the valid var color to accessable richgreen

--- a/source/css/scss/generic/_variables.scss
+++ b/source/css/scss/generic/_variables.scss
@@ -31,7 +31,7 @@ $black : #212121;
 $dim : rgba(0,0,0,0.5);
 
 $error : $richred;
-$valid : $lightgreen;
+$valid : $richgreen;
 $warning : #fff664;
 $information : #000db5;
 
