LC-834 create intermediate phase for header between phone and desktop

--- a/source/css/scss/objects/_header.scss
+++ b/source/css/scss/objects/_header.scss
@@ -89,6 +89,9 @@
 	@extend .lc;
 	display: block;
 	max-width: 310px;
+	@media all and (min-width: $bp-med){
+		max-width: 100%
+	}
 	@media all and (min-width: $bp-med-2){
 		padding: 0 10px;
 		max-width: 1020px;
@@ -114,6 +117,13 @@
 	font-size: 0.75em;
 	line-height: 1.25em;
 	margin-bottom: 0;
+	@media all and (min-width: $bp-med){
+		font-size: 1.1em;
+		line-height: 1.25em;
+		width: 8em;
+		margin: 0.75em 0 0 1em;
+		float: left;
+	}
 	@media all and (min-width: $bp-med-2){
 		font-size: 1.55em;
 		line-height: 1.25em;
