--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1150,7 +1150,7 @@ td {
   float: right;
 }
 @media all and (max-width: 480px) {
-  /* line 150, scss/objects/_header.scss */
+  /* line 161, scss/objects/_header.scss */
   .search-form {
     margin: 1em 0.5em;
     width: 100%;
@@ -1284,13 +1284,26 @@ td {
   height: 100%;
   z-index: 100;
 }
-/* line 108, scss/objects/_nav.scss */
+/* line 107, scss/objects/_nav.scss */
+.drop-down img {
+  height: 0.5em;
+  margin-left: 0.25em;
+}
+/* line 113, scss/objects/_nav.scss */
+.drop-down li.open img {
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+/* line 120, scss/objects/_nav.scss */
 .drop-down ul.lvl1 {
   max-width: 1020px;
   width: 80vw;
   margin: 14em auto 0;
 }
-/* line 112, scss/objects/_nav.scss */
+/* line 124, scss/objects/_nav.scss */
 .drop-down ul.lvl1 li {
   color: #fff;
   font-weight: bold;
@@ -1298,25 +1311,25 @@ td {
   line-height: 1.15384615em;
 }
 @media all and (min-width: 720px) {
-  /* line 112, scss/objects/_nav.scss */
+  /* line 124, scss/objects/_nav.scss */
   .drop-down ul.lvl1 li {
     font-size: 2em;
     line-height: 1.25em;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 112, scss/objects/_nav.scss */
+  /* line 124, scss/objects/_nav.scss */
   .drop-down ul.lvl1 li {
     font-size: 2.25em;
     line-height: 1.25em;
   }
 }
-/* line 127, scss/objects/_nav.scss */
+/* line 139, scss/objects/_nav.scss */
 .drop-down ul.lvl2 {
   width: 60vw;
   margin: 1em 0 1em 2em;
 }
-/* line 130, scss/objects/_nav.scss */
+/* line 142, scss/objects/_nav.scss */
 .drop-down ul.lvl2 li {
   color: #fff;
   font-weight: normal;
@@ -1324,14 +1337,14 @@ td {
   line-height: 1.15384615em;
 }
 @media all and (min-width: 720px) {
-  /* line 130, scss/objects/_nav.scss */
+  /* line 142, scss/objects/_nav.scss */
   .drop-down ul.lvl2 li {
     font-size: 1.5em;
     line-height: 1.25em;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 130, scss/objects/_nav.scss */
+  /* line 142, scss/objects/_nav.scss */
   .drop-down ul.lvl2 li {
     font-size: 2em;
     line-height: 1.25em;
