--- a/source/_patterns/02-organisms/00-global/00-header.mustache
+++ b/source/_patterns/02-organisms/00-global/00-header.mustache
@@ -1,21 +1,21 @@
 <!--Begin .header -->
-{{> molecules-drop-down-nav }}
-<div class="header-container">
-<div class="header-wrap">
-<header class="header cf" role="banner">
-	{{> atoms-logo }}
-	<p class="title">Los Angeles Innovation and Performance Commission</p>
- 	<a href="#search-form" class="nav-toggle nav-toggle-search icon-search is-vishidden"><span class="is-vishidden">Search</span></a>
-	<a href="#nav" class="nav-toggle nav-toggle-menu icon-menu is-vishidden"><span class="is-vishidden">Menu</span></a>
-	{{> molecules-primary-nav }}
-	{{> molecules-search }}
-</header>
-</div>
-<div class="header-wrap-background-blur">
- <header class="header cf" role="banner">
-</div>
-<div class="header-wrap-background">
- <header class="header cf" role="banner">
-</div>
-</div>
+<!-- <div class="header-container"> -->
+	<div class="header-wrap">
+		<header class="header cf" role="banner">
+			{{> atoms-logo }}
+			<p class="title">Los Angeles Innovation and Performance Commission</p>
+		 	<a href="#search-form" class="nav-toggle nav-toggle-search icon-search is-vishidden"><span class="is-vishidden">Search</span></a>
+			<a href="#nav" class="nav-toggle nav-toggle-menu icon-menu is-vishidden"><span class="is-vishidden">Menu</span></a>
+			{{> molecules-primary-nav }}
+			{{> molecules-search }}
+		</header>
+	</div>
+	{{> molecules-drop-down-nav }}
+	<div class="header-wrap-background">
+		<header class="header cf" role="banner">
+	</div>
+	<div class="header-wrap-background-blur">
+		<header class="header cf" role="banner">
+	</div>
+<!-- </div> -->
 <!-- End .header -->
