--- a/source/css/scss/objects/_nav.scss
+++ b/source/css/scss/objects/_nav.scss
@@ -98,11 +98,11 @@
 .drop-down {
 	display: none;
 	position: absolute;
-	top: 0%;
+	top: 0;
 	background: $classicblue;
 	width: 100%;
 	height: 100%;
-	z-index: 100;
+	z-index: 300;
 	
 	img {
 		height: 0.5em;
