--- a/source/css/style.css
+++ b/source/css/style.css
@@ -932,7 +932,6 @@ td {
 .header-container {
   top: 2.5em;
   width: 100%;
-  z-index: 200;
 }
 @media all and (min-width: 720px) {
   /* line 1, scss/objects/_header.scss */
@@ -942,21 +941,22 @@ td {
   }
 }
 
-/* line 10, scss/objects/_header.scss */
+/* line 9, scss/objects/_header.scss */
 .header-wrap {
   width: 100%;
-  z-index: 200;
+  z-index: 500;
 }
 @media all and (min-width: 720px) {
-  /* line 10, scss/objects/_header.scss */
+  /* line 9, scss/objects/_header.scss */
   .header-wrap {
     display: block;
     position: absolute;
+    top: 2.5em;
     width: 100%;
   }
 }
 @media all and (max-width: 720px) {
-  /* line 10, scss/objects/_header.scss */
+  /* line 9, scss/objects/_header.scss */
   .header-wrap {
     position: relative;
     top: 0;
@@ -965,25 +965,26 @@ td {
   }
 }
 
-/* line 26, scss/objects/_header.scss */
+/* line 25, scss/objects/_header.scss */
 .header-wrap-background {
   background: #212121;
   height: 105px;
-  z-index: 100;
+  z-index: 400;
   opacity: .5;
   filter: alpha(opacity=50);
   /* For IE8 and earlier */
 }
 @media all and (min-width: 720px) {
-  /* line 26, scss/objects/_header.scss */
+  /* line 25, scss/objects/_header.scss */
   .header-wrap-background {
     display: block;
     position: absolute;
+    top: 2.5em;
     width: 100%;
   }
 }
 @media all and (max-width: 720px) {
-  /* line 26, scss/objects/_header.scss */
+  /* line 25, scss/objects/_header.scss */
   .header-wrap-background {
     position: absolute;
     top: 0;
@@ -992,12 +993,12 @@ td {
   }
 }
 
-/* line 45, scss/objects/_header.scss */
+/* line 44, scss/objects/_header.scss */
 .header-wrap-background-blur {
   max-width: 1910px;
   width: 100%;
   height: 105px;
-  z-index: 100;
+  z-index: 200;
   margin-left: auto;
   margin-right: auto;
   left: 0;
@@ -1015,17 +1016,18 @@ td {
   padding: 0px;
 }
 @media all and (min-width: 720px) {
-  /* line 45, scss/objects/_header.scss */
+  /* line 44, scss/objects/_header.scss */
   .header-wrap-background-blur {
     display: block;
     position: absolute;
+    top: 2.5em;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
   }
 }
 @media all and (max-width: 720px) {
-  /* line 45, scss/objects/_header.scss */
+  /* line 44, scss/objects/_header.scss */
   .header-wrap-background-blur {
     position: absolute;
     top: 0;
@@ -1034,55 +1036,55 @@ td {
   }
 }
 
-/* line 80, scss/objects/_header.scss */
+/* line 79, scss/objects/_header.scss */
 .home .header-wrap-background-blur {
   background-image: url("../images/hero.jpg");
 }
 
-/* line 83, scss/objects/_header.scss */
+/* line 82, scss/objects/_header.scss */
 .blog .header-wrap-background-blur {
   background-image: url("../images/hero_2nd.jpg");
 }
 
-/* line 86, scss/objects/_header.scss */
+/* line 85, scss/objects/_header.scss */
 .article .header-wrap-background-blur {
   background-image: url("../images/hero_2nd.jpg");
 }
 
-/* line 89, scss/objects/_header.scss */
+/* line 88, scss/objects/_header.scss */
 .header {
   display: block;
   max-width: 310px;
 }
 @media all and (min-width: 480px) {
-  /* line 89, scss/objects/_header.scss */
+  /* line 88, scss/objects/_header.scss */
   .header {
     max-width: 100%;
   }
 }
 @media all and (min-width: 720px) {
-  /* line 89, scss/objects/_header.scss */
+  /* line 88, scss/objects/_header.scss */
   .header {
     padding: 0 10px;
     max-width: 1020px;
   }
 }
 
-/* line 102, scss/objects/_header.scss */
+/* line 101, scss/objects/_header.scss */
 .logo {
   float: left;
   max-width: 5.5em;
   margin: 0.8em 0 0.8em 1.4em;
 }
 @media all and (min-width: 720px) {
-  /* line 102, scss/objects/_header.scss */
+  /* line 101, scss/objects/_header.scss */
   .logo {
     max-width: 9rem;
     margin: 0;
   }
 }
 
-/* line 113, scss/objects/_header.scss */
+/* line 112, scss/objects/_header.scss */
 .title {
   float: left;
   margin: 1.2em 0 0 1em;
@@ -1093,7 +1095,7 @@ td {
   margin-bottom: 0;
 }
 @media all and (min-width: 480px) {
-  /* line 113, scss/objects/_header.scss */
+  /* line 112, scss/objects/_header.scss */
   .title {
     font-size: 1.1em;
     line-height: 1.25em;
@@ -1103,7 +1105,7 @@ td {
   }
 }
 @media all and (min-width: 720px) {
-  /* line 113, scss/objects/_header.scss */
+  /* line 112, scss/objects/_header.scss */
   .title {
     font-size: 1.55em;
     line-height: 1.25em;
@@ -1113,7 +1115,7 @@ td {
   }
 }
 @media all and (min-width: 960px) {
-  /* line 113, scss/objects/_header.scss */
+  /* line 112, scss/objects/_header.scss */
   .title {
     font-size: 2em;
     line-height: 1.25em;
@@ -1123,7 +1125,7 @@ td {
   }
 }
 
-/* line 144, scss/objects/_header.scss */
+/* line 143, scss/objects/_header.scss */
 .nav-toggle {
   float: right;
   display: block;
@@ -1133,32 +1135,32 @@ td {
   border-left: 1px solid #dbdbdb;
 }
 @media all and (min-width: 480px) {
-  /* line 144, scss/objects/_header.scss */
+  /* line 143, scss/objects/_header.scss */
   .nav-toggle {
     display: none;
   }
 }
 @media all and (max-width: 17em) {
-  /* line 144, scss/objects/_header.scss */
+  /* line 143, scss/objects/_header.scss */
   .nav-toggle {
     padding-left: 0.2rem;
     padding-right: 0.2rem;
   }
 }
 
-/* line 162, scss/objects/_header.scss */
+/* line 161, scss/objects/_header.scss */
 .search-form {
   float: right;
 }
 @media all and (max-width: 480px) {
-  /* line 162, scss/objects/_header.scss */
+  /* line 161, scss/objects/_header.scss */
   .search-form {
     margin: 1em 0.5em;
     width: 100%;
   }
 }
 @media all and (min-width: 480px) {
-  /* line 162, scss/objects/_header.scss */
+  /* line 161, scss/objects/_header.scss */
   .search-form {
     margin: 1em 0.5em;
     width: 100%;
@@ -1279,11 +1281,11 @@ td {
 .drop-down {
   display: none;
   position: absolute;
-  top: 0%;
+  top: 0;
   background: #014982;
   width: 100%;
   height: 100%;
-  z-index: 100;
+  z-index: 300;
 }
 /* line 107, scss/objects/_nav.scss */
 .drop-down img {
