LC-834 add font awesome icons to drop-down menu

--- a/source/css/scss/objects/_nav.scss
+++ b/source/css/scss/objects/_nav.scss
@@ -104,13 +104,12 @@
 	height: 100%;
 	z-index: 300;
 	
-	img {
-		height: 0.5em;
+	i {
 		margin-left: 0.25em;
 	}
 
 	li.open {
-		img {
+		i {
 			@include vendor-prefix(transform, rotate(90deg)) {}
 		}
 	}
