--- a/source/_patterns/01-molecules/05-navigation/01-drop-down-nav.mustache
+++ b/source/_patterns/01-molecules/05-navigation/01-drop-down-nav.mustache
@@ -1,7 +1,7 @@
 <div class="drop-down">
 	<ul class="lvl1">
 		<li>Home</li>
-		<li class="open">Innovation Fund <img src="../../images/arrow-white.png"></li>
+		<li class="open">Innovation Fund <i class="fa fa-caret-right"></i></li>
 		<ul class="lvl2">
 			<li>Overview</li>
 			<li>Submit</li>
@@ -9,9 +9,9 @@
 			<li>Ideas</li>
 			<li>Outreach Materials</li>
 		</ul>
-		<li>Agendas & Minutes <img src="../../images/arrow-white.png"></li>
+		<li>Agendas & Minutes <i class="fa fa-caret-right"></i></li>
 		<li>Calendar</li>
-		<li>What's New <img src="../../images/arrow-white.png"></li>
+		<li>What's New <i class="fa fa-caret-right"></i></li>
 		<li>Contact Us</li>
 	</ul>
 </div>
