LC-834 adds font awesome icons to social share bar

--- a/source/_patterns/01-molecules/06-components/00-social-share.mustache
+++ b/source/_patterns/01-molecules/06-components/00-social-share.mustache
@@ -3,7 +3,7 @@
 		<li>
 			<a href="{{ url }}" class="twitter">
 				<div class="img-wrap float">
-					<img src="../../images/twitter_icon.png">
+					<i class="fa fa-twitter"></i>
 				</div>
 				<div class="text-wrap">
 					<p>Join Mayor @ericgarcetti as we make history and sign #RaisetheWageLA into law this Saturday http://www.lamayor.org/signing_ceremony …</p>
@@ -13,35 +13,35 @@
 		<li>
 			<a href="{{ url }}" class="facebook">
 				<div class="img-wrap" >
-				<img src="../../images/facebook_icon.png">
+				<i class="fa fa-facebook"></i>
 				</div>
 			</a>
 		</li>
 		<li>
 			<a href="{{ url }}" class="instagram">
 				<div class="img-wrap" > 
-				<img src="../../images/instagram_icon.png">
+				<i class="fa fa-instagram"></i>
 				</div>
 			</a>
 		</li>
 		<li>
 			<a href="{{ url }}" class="linkedin">
 				<div class="img-wrap" >
-				<img src="../../images/linkedin_icon.png">
+				<i class="fa fa-linkedin"></i>
 				</div>
 			</a>
 		</li>
 		<li>
 			<a href="{{ url }}" class="youtube">
 				<div class="img-wrap">
-				<img src="../../images/youtube_icon.png">
+				<i class="fa fa-youtube"></i>
 				</div>
 			</a>
 		</li>
 		<li>
 			<a href="{{ url }}" class="sharethis">
 				<div class="img-wrap" >
-				<img src="../../images/sharethis_icon.png">
+				<i class="fa fa-share-alt"></i>
 				</div>
 			</a>
 		</li>
@@ -55,7 +55,7 @@
 		<li>
 			<a href="{{ url }}" class="rss">
 				<div class="img-wrap" >
-				<img src="../../images/rss_icon.png">
+				<i class="fa fa-rss"></i>
 				</div>
 			</a>
 		</li>
