--- a/source/css/scss/objects/_article.scss
+++ b/source/css/scss/objects/_article.scss
@@ -100,6 +100,13 @@
 			}
 		}
 
+		i { 
+			font-size: 1.3em;
+			@media all and (min-width: $bp-med-2) {
+				font-size: 2.2em;
+			}
+		}
+
 		.text-wrap {
 		  text-align: left;
 		  height: 2.7em;
