--- a/source/css/scss/objects/_header.scss
+++ b/source/css/scss/objects/_header.scss
@@ -23,6 +23,11 @@
 	}
 }
 .header-wrap-background{
+	max-width: 1920px;
+	margin-left: auto;
+	margin-right: auto;
+	left: 0;
+	right: 0;
 	background: $black;
 	height: 105px;
 	z-index: 400;
@@ -33,6 +38,8 @@
 		position: absolute;
 		top: 2.5em;
 		width: 100%;
+		margin-left: auto;
+		margin-right: auto;
 	}
 	@media all and (max-width: $bp-med-2) {
 		position: absolute;
