--- a/source/css/style.css
+++ b/source/css/style.css
@@ -969,6 +969,11 @@ td {
 
 /* line 25, scss/objects/_header.scss */
 .header-wrap-background {
+  max-width: 1920px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
   background: #212121;
   height: 105px;
   z-index: 400;
@@ -983,6 +988,8 @@ td {
     position: absolute;
     top: 2.5em;
     width: 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 @media all and (max-width: 720px) {
@@ -995,7 +1002,7 @@ td {
   }
 }
 
-/* line 44, scss/objects/_header.scss */
+/* line 51, scss/objects/_header.scss */
 .header-wrap-background-blur {
   max-width: 1910px;
   width: 100%;
@@ -1018,7 +1025,7 @@ td {
   padding: 0px;
 }
 @media all and (min-width: 720px) {
-  /* line 44, scss/objects/_header.scss */
+  /* line 51, scss/objects/_header.scss */
   .header-wrap-background-blur {
     display: block;
     position: absolute;
@@ -1029,7 +1036,7 @@ td {
   }
 }
 @media all and (max-width: 720px) {
-  /* line 44, scss/objects/_header.scss */
+  /* line 51, scss/objects/_header.scss */
   .header-wrap-background-blur {
     position: absolute;
     top: 0;
@@ -1038,55 +1045,55 @@ td {
   }
 }
 
-/* line 79, scss/objects/_header.scss */
+/* line 86, scss/objects/_header.scss */
 .home .header-wrap-background-blur {
   background-image: url("../images/hero.jpg");
 }
 
-/* line 82, scss/objects/_header.scss */
+/* line 89, scss/objects/_header.scss */
 .blog .header-wrap-background-blur {
   background-image: url("../images/hero_2nd.jpg");
 }
 
-/* line 85, scss/objects/_header.scss */
+/* line 92, scss/objects/_header.scss */
 .article .header-wrap-background-blur {
   background-image: url("../images/hero_2nd.jpg");
 }
 
-/* line 88, scss/objects/_header.scss */
+/* line 95, scss/objects/_header.scss */
 .header {
   display: block;
   max-width: 310px;
 }
 @media all and (min-width: 480px) {
-  /* line 88, scss/objects/_header.scss */
+  /* line 95, scss/objects/_header.scss */
   .header {
     max-width: 100%;
   }
 }
 @media all and (min-width: 720px) {
-  /* line 88, scss/objects/_header.scss */
+  /* line 95, scss/objects/_header.scss */
   .header {
     padding: 0 10px;
     max-width: 1020px;
   }
 }
 
-/* line 101, scss/objects/_header.scss */
+/* line 108, scss/objects/_header.scss */
 .logo {
   float: left;
   max-width: 5.5em;
   margin: 0.8em 0 0.8em 1.4em;
 }
 @media all and (min-width: 720px) {
-  /* line 101, scss/objects/_header.scss */
+  /* line 108, scss/objects/_header.scss */
   .logo {
     max-width: 9rem;
     margin: 0;
   }
 }
 
-/* line 112, scss/objects/_header.scss */
+/* line 119, scss/objects/_header.scss */
 .title {
   float: left;
   margin: 1.2em 0 0 1em;
@@ -1097,7 +1104,7 @@ td {
   margin-bottom: 0;
 }
 @media all and (min-width: 480px) {
-  /* line 112, scss/objects/_header.scss */
+  /* line 119, scss/objects/_header.scss */
   .title {
     font-size: 1.1em;
     line-height: 1.25em;
@@ -1107,7 +1114,7 @@ td {
   }
 }
 @media all and (min-width: 720px) {
-  /* line 112, scss/objects/_header.scss */
+  /* line 119, scss/objects/_header.scss */
   .title {
     font-size: 1.55em;
     line-height: 1.25em;
@@ -1117,7 +1124,7 @@ td {
   }
 }
 @media all and (min-width: 960px) {
-  /* line 112, scss/objects/_header.scss */
+  /* line 119, scss/objects/_header.scss */
   .title {
     font-size: 2em;
     line-height: 1.25em;
@@ -1127,7 +1134,7 @@ td {
   }
 }
 
-/* line 143, scss/objects/_header.scss */
+/* line 150, scss/objects/_header.scss */
 .nav-toggle {
   float: right;
   display: block;
@@ -1137,20 +1144,20 @@ td {
   border-left: 1px solid #dbdbdb;
 }
 @media all and (min-width: 480px) {
-  /* line 143, scss/objects/_header.scss */
+  /* line 150, scss/objects/_header.scss */
   .nav-toggle {
     display: none;
   }
 }
 @media all and (max-width: 17em) {
-  /* line 143, scss/objects/_header.scss */
+  /* line 150, scss/objects/_header.scss */
   .nav-toggle {
     padding-left: 0.2rem;
     padding-right: 0.2rem;
   }
 }
 
-/* line 161, scss/objects/_header.scss */
+/* line 168, scss/objects/_header.scss */
 .search-form {
   float: right;
   margin: 1em 0;
