LC-837 changes layout for home page from two col to one col

--- a/source/_patterns/03-templates/00-homepage.mustache
+++ b/source/_patterns/03-templates/00-homepage.mustache
@@ -18,7 +18,7 @@
 		<div class="demo">
 			{{> molecules-slider }}
 			<hr />
-			<div class="l-two-col">
+			<div class="l-one-col">
 				<div class="l-main">
 					<section class="section latest-posts">
 						<h2 class="section-title">Latest Posts</h2>
@@ -30,10 +30,10 @@
 						<a href="#" class="text-btn">View more posts</a>
 					</section>
 				</div><!--end .l-main-->
-				<div class="l-sidebar">
+				<!-- <div class="l-sidebar">
 					{{> organisms-recent-tweets }}
 					{{> organisms-poll }}
-				</div><!--end .l-sidebar-->
+				</div> --><!--end .l-sidebar-->
 			</div><!--end .l-two-col-->
 		</div><!--end .demo-->
 	</div><!--End role=main-->
