--- a/source/css/style.css
+++ b/source/css/style.css
@@ -661,9 +661,15 @@ td {
 /*------------------------------------*\
     $TEMPLATES
 \*------------------------------------*/
+/* One Column Layout */
+/* line 17, scss/objects/_layout.scss */
+.l-one-col .l-main {
+  width: 100%;
+}
+
 /* Two Column Layout */
 @media all and (min-width: 960px) {
-  /* line 19, scss/objects/_layout.scss */
+  /* line 26, scss/objects/_layout.scss */
   .l-two-col .l-main {
     float: left;
     width: 70%;
@@ -671,13 +677,13 @@ td {
   }
 }
 @media all and (max-width: 960px) {
-  /* line 27, scss/objects/_layout.scss */
+  /* line 34, scss/objects/_layout.scss */
   .l-two-col .l-sidebar {
     clear: both;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 27, scss/objects/_layout.scss */
+  /* line 34, scss/objects/_layout.scss */
   .l-two-col .l-sidebar {
     float: left;
     width: 30%;
@@ -689,80 +695,80 @@ td {
     $GRIDS
 \*------------------------------------*/
 /* Grid Container */
-/* line 46, scss/objects/_layout.scss */
+/* line 53, scss/objects/_layout.scss */
 .g {
   overflow: hidden;
   margin: 0 -0.5em;
 }
 
 /* Grid Item */
-/* line 52, scss/objects/_layout.scss */
+/* line 59, scss/objects/_layout.scss */
 .gi {
   padding: 0;
 }
-/* line 55, scss/objects/_layout.scss */
+/* line 62, scss/objects/_layout.scss */
 .gi img {
   display: block;
 }
 @media all and (min-width: 480px) {
-  /* line 52, scss/objects/_layout.scss */
+  /* line 59, scss/objects/_layout.scss */
   .gi {
     float: left;
   }
 }
 
 /* Grid 1up */
-/* line 66, scss/objects/_layout.scss */
+/* line 73, scss/objects/_layout.scss */
 .g-1up .gi {
   width: 100%;
 }
 
 /* Grid 2up */
 @media all and (min-width: 480px) {
-  /* line 74, scss/objects/_layout.scss */
+  /* line 81, scss/objects/_layout.scss */
   .g-2up > .gi {
     float: left;
     width: 50%;
   }
-  /* line 78, scss/objects/_layout.scss */
+  /* line 85, scss/objects/_layout.scss */
   .g-2up > .gi:nth-of-type(odd) {
     clear: left;
   }
 }
 
 /* Grid Half (Always displayed side by side) */
-/* line 87, scss/objects/_layout.scss */
+/* line 94, scss/objects/_layout.scss */
 .g-half > .gi {
   float: left;
   width: 50%;
 }
-/* line 91, scss/objects/_layout.scss */
+/* line 98, scss/objects/_layout.scss */
 .g-half > .gi:nth-of-type(odd) {
   clear: left;
 }
 
 /* Grid 3up */
 @media all and (min-width: 480px) {
-  /* line 100, scss/objects/_layout.scss */
+  /* line 107, scss/objects/_layout.scss */
   .g-3up > .gi {
     float: left;
     width: 50%;
   }
-  /* line 104, scss/objects/_layout.scss */
+  /* line 111, scss/objects/_layout.scss */
   .g-3up > .gi:nth-of-type(2n+1) {
     clear: left;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 111, scss/objects/_layout.scss */
+  /* line 118, scss/objects/_layout.scss */
   .g-3up > .gi {
     width: 33.3333333%;
   }
-  /* line 114, scss/objects/_layout.scss */
+  /* line 121, scss/objects/_layout.scss */
   .g-3up > .gi:nth-of-type(2n+1) {
     clear: none;
   }
-  /* line 118, scss/objects/_layout.scss */
+  /* line 125, scss/objects/_layout.scss */
   .g-3up > .gi:nth-of-type(3n+1) {
     clear: left;
   }
@@ -770,130 +776,130 @@ td {
 
 /* Grid 4up */
 @media all and (min-width: 480px) {
-  /* line 128, scss/objects/_layout.scss */
+  /* line 135, scss/objects/_layout.scss */
   .g-4up > .gi {
     float: left;
     width: 50%;
   }
-  /* line 132, scss/objects/_layout.scss */
+  /* line 139, scss/objects/_layout.scss */
   .g-4up > .gi:nth-of-type(2n+1) {
     clear: both;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 139, scss/objects/_layout.scss */
+  /* line 146, scss/objects/_layout.scss */
   .g-4up > .gi {
     width: 25%;
   }
-  /* line 142, scss/objects/_layout.scss */
+  /* line 149, scss/objects/_layout.scss */
   .g-4up > .gi:nth-of-type(2n+1) {
     clear: none;
   }
-  /* line 146, scss/objects/_layout.scss */
+  /* line 153, scss/objects/_layout.scss */
   .g-4up > .gi:nth-of-type(4n+1) {
     clear: left;
   }
 }
 
 /* Grid Quarter (Always displayed side by side) */
-/* line 155, scss/objects/_layout.scss */
+/* line 162, scss/objects/_layout.scss */
 .g-quarter > .gi {
   float: left;
   width: 24%;
 }
-/* line 159, scss/objects/_layout.scss */
+/* line 166, scss/objects/_layout.scss */
 .g-quarter > .gi:nth-of-type(4n+1) {
   clear: left;
 }
 
 @media all and (min-width: 29.75em) {
-  /* line 168, scss/objects/_layout.scss */
+  /* line 175, scss/objects/_layout.scss */
   .g-max4 > .gi {
     float: left;
     width: 50%;
   }
-  /* line 172, scss/objects/_layout.scss */
+  /* line 179, scss/objects/_layout.scss */
   .g-max4 > .gi:nth-of-type(2n+1) {
     clear: both;
   }
 }
 @media all and (min-width: 39.8em) {
-  /* line 179, scss/objects/_layout.scss */
+  /* line 186, scss/objects/_layout.scss */
   .g-max4 > .gi {
     width: 33.3333333%;
   }
-  /* line 182, scss/objects/_layout.scss */
+  /* line 189, scss/objects/_layout.scss */
   .g-max4 > .gi:nth-of-type(2n+1) {
     clear: none;
   }
-  /* line 186, scss/objects/_layout.scss */
+  /* line 193, scss/objects/_layout.scss */
   .g-max4 > .gi:nth-of-type(3n+1) {
     clear: left;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 193, scss/objects/_layout.scss */
+  /* line 200, scss/objects/_layout.scss */
   .g-max4 > .gi {
     width: 25%;
   }
-  /* line 196, scss/objects/_layout.scss */
+  /* line 203, scss/objects/_layout.scss */
   .g-max4 > .gi:nth-of-type(3n+1) {
     clear: none;
   }
-  /* line 200, scss/objects/_layout.scss */
+  /* line 207, scss/objects/_layout.scss */
   .g-max4 > .gi:nth-of-type(4n+1) {
     clear: left;
   }
 }
 
 /* Grid 5up */
-/* line 210, scss/objects/_layout.scss */
+/* line 217, scss/objects/_layout.scss */
 .g-max5 > .gi {
   float: left;
   width: 50%;
 }
-/* line 214, scss/objects/_layout.scss */
+/* line 221, scss/objects/_layout.scss */
 .g-max5 > .gi:nth-of-type(2n+1) {
   clear: both;
 }
 @media all and (min-width: 39.8em) {
-  /* line 220, scss/objects/_layout.scss */
+  /* line 227, scss/objects/_layout.scss */
   .g-max5 > .gi {
     width: 33.3333333%;
   }
-  /* line 223, scss/objects/_layout.scss */
+  /* line 230, scss/objects/_layout.scss */
   .g-max5 > .gi:nth-of-type(2n+1) {
     clear: none;
   }
-  /* line 227, scss/objects/_layout.scss */
+  /* line 234, scss/objects/_layout.scss */
   .g-max5 > .gi:nth-of-type(3n+1) {
     clear: left;
   }
 }
 @media all and (min-width: 480px) {
-  /* line 234, scss/objects/_layout.scss */
+  /* line 241, scss/objects/_layout.scss */
   .g-max5 > .gi {
     width: 25%;
   }
-  /* line 237, scss/objects/_layout.scss */
+  /* line 244, scss/objects/_layout.scss */
   .g-max5 > .gi:nth-of-type(3n+1) {
     clear: none;
   }
-  /* line 241, scss/objects/_layout.scss */
+  /* line 248, scss/objects/_layout.scss */
   .g-max5 > .gi:nth-of-type(4n+1) {
     clear: left;
   }
 }
 @media all and (min-width: 720px) {
-  /* line 248, scss/objects/_layout.scss */
+  /* line 255, scss/objects/_layout.scss */
   .g-max5 > .gi {
     width: 20%;
   }
-  /* line 251, scss/objects/_layout.scss */
+  /* line 258, scss/objects/_layout.scss */
   .g-max5 > .gi:nth-of-type(4n+1) {
     clear: none;
   }
-  /* line 255, scss/objects/_layout.scss */
+  /* line 262, scss/objects/_layout.scss */
   .g-max5 > .gi:nth-of-type(5n+1) {
     clear: left;
   }
@@ -901,7 +907,7 @@ td {
 
 /* Grid 2/3 */
 @media all and (min-width: 480px) {
-  /* line 263, scss/objects/_layout.scss */
+  /* line 270, scss/objects/_layout.scss */
   .gi-2-3 {
     float: left;
     width: 66.666666%;
@@ -909,7 +915,7 @@ td {
 }
 
 @media all and (min-width: 480px) {
-  /* line 270, scss/objects/_layout.scss */
+  /* line 277, scss/objects/_layout.scss */
   .gi-1-3 {
     float: left;
     width: 33.333333%;
@@ -917,11 +923,11 @@ td {
 }
 
 /* Grid 4up block */
-/* line 279, scss/objects/_layout.scss */
+/* line 286, scss/objects/_layout.scss */
 .g-opposites .gi {
   float: left;
 }
-/* line 282, scss/objects/_layout.scss */
+/* line 289, scss/objects/_layout.scss */
 .g-opposites .gi:last-child {
   float: right;
   text-align: right;
