--- a/source/css/scss/objects/_lists.scss
+++ b/source/css/scss/objects/_lists.scss
@@ -1,7 +1,11 @@
 .inline-list {
 	li {
 		display: inline-block;
-	}
+		border-top: 1.25em;
+		border-bottom: .75em;
+		border-left: 2.5em;
+		border-right: 1em;
+	} 
 }
 
 /* Social List */
