Updates btn class

--- a/source/css/scss/objects/_buttons.scss
+++ b/source/css/scss/objects/_buttons.scss
@@ -7,7 +7,11 @@
 	color: $white;
 	line-height: 1;
 	font-weight: bold;
-	padding: $pad;
+	// padding: $pad;
+	padding-top: 1.25em;
+	padding-bottom: .75em;
+	padding-left: 2.5em;
+	padding-right: 1em;
 	border: 0;
 	text-align: center;
 	width: initial;
