LC-833 updates for colors atom

--- a/source/_patterns/00-atoms/01-global/00-colors.mustache
+++ b/source/_patterns/00-atoms/01-global/00-colors.mustache
@@ -58,6 +58,25 @@
 		<span class="sg-label">#63C9F7</span>
 	</li>
 	<li>
+		<span class="sg-label">Megenta</span>
+		<span class="sg-swatch lrg" style="background: #D9007C;"></span>
+		<div class="color-test">
+			<div class="result">
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+				<span class="pass">o</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
+		<span class="sg-label">#D9007C</span>
+	</li>
+	<li>
 		<span class="sg-label">RichRed</span>
 		<span class="sg-swatch lrg" style="background: #CC2A14;"></span>
 		<div class="color-test">
@@ -173,6 +192,25 @@
 			</div>
 		</div>
 		<span class="sg-label">#00758C</span>
+	</li>
+	<li>
+		<span class="sg-label">RichViolet</span>
+		<span class="sg-swatch lrg" style="background: #54277B;"></span>
+		<div class="color-test">
+			<div class="result">
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+				<span class="pass">o</span>
+				<span class="pass">o</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
+		<span class="sg-label">#54277B</span>
 	</li>
 	<li>
 		<span class="sg-label">Burgundy</span>
