--- a/source/css/scss/base/_color.scss
+++ b/source/css/scss/base/_color.scss
@@ -1,15 +1,20 @@
-// .sg-colors.lrg {
-// 	@media all and (min-width: 30em){
-// 		width: 10em;
-// 	}
-// }
-
-// .sg-swatch.lrg {
-// 	@media all and (min-width: 30em){
-// 		height: 8em;
-// 	}
-// }
-
+ul.sg-colors{
+	li{
+		width: 100%;
+		@media all and (min-width: $bp-med) {
+			float: left;
+			width: 8em;
+		}
+		span.lrg {
+			height: 1.5em;
+			width: 99%;
+			@media all and (min-width: $bp-med) {
+				height: 7em;
+				width: 7em;	
+			}
+		}
+	}
+}
 
 .color-test{
 	display: none;
